--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<button id=1 type="button" onclick="select(30)">Click Me!</button>
 			<button id=1 type="button" onclick="select(31)">Click Me!</button>
 			<button id=1 type="button" onclick="select(32)">Click Me!</button>
-			<h5 style="text-align: center;">By:WEBCITIZEN</h5>
+			<h5 style="text-align: center;">WEBCITIZEN</h5>
 		</div>
 	</div>
 </body>
