--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div id="image" class="image">
 	<button style="	background-color:red; height:40px; border-radius: 5px;" type="button" onclick="restart()">Restart</button>
-	<h1 id="head">Click Correct Button to Change Image</h1>
+	<h1 id="head">Find Correct Button to Change Image</h1>
 	<h1 style="font-size:60px;" id="clock">10<br></h1>
 		<div id="1" class="container">
 			<button id=1 type="button" onclick="select(1)">Click Me!</button>
